--- a/spatial_project/requirements.txt
+++ b/spatial_project/requirements.txt
@@ -3,3 +3,6 @@ python-dotenv==0.20.0
 gunicorn==20.1.0
 psycopg2-binary==2.9.3
 tzdata==2022.1
+djangorestframework==3.13.1
+djangorestframework-gis==1.0
+django-filter==21.1
